--- a/5- css的属性使用/7- css文本/文本修饰-划线.html
+++ b/5- css的属性使用/7- css文本/文本修饰-划线.html
@@ -7,20 +7,29 @@
         .overline {
             text-decoration: overline;
         }
+
         .underline {
             text-decoration: underline;
         }
+
         .linethrough {
             text-decoration: line-through;
         }
+
         .none {
             text-decoration: none;
+        }
+
+        /* 缩进*/
+        .indent {
+            text-indent: 40px;
         }
     </style>
 </head>
 <body>
 <div class="overline">
-上划线</div>
+    上划线
+</div>
 <div class="underline">
     下划线
 </div>
@@ -30,5 +39,7 @@
 <div class="none">
     没有线~
 </div>
+
+<div class="indent">suojinsuojinsuojinsuojin</div>
 </body>
 </html>
