--- a/5- css的属性使用/7- css文本/文本对齐.html
+++ b/5- css的属性使用/7- css文本/文本对齐.html
@@ -9,9 +9,21 @@
             text-indent: 40px;
             text-align: right;
         }
+
+        div {
+            font-size: 100px;
+        }
+
+        span {
+            font-size: 40px;
+            vertical-align: bottom;
+        }
     </style>
 </head>
 <body>
 <div class="indent">suojinsuojinsuojinsuojin</div>
+
+
+<div style="height: 400px; background-color: rgba(8,94,128,0.19);">你好，x<span>x垂直对齐</span></div>
 </body>
 </html>
