--- a/6- css盒子/空白问题.html
+++ b/6- css盒子/空白问题.html
@@ -7,11 +7,13 @@
         div {
             height: 500px;
             background-color: red;
+            /*屏蔽换行的那个空格，因为行内和行内块 都认为是文字内容*/
+            font-size: 0;
         }
 
         span {
+            font-size: 20px;
             background-color: #03e8e8;
-
         }
         img {
             width: 50px;
