--- a/7-浮动/4-使用float进行布局.html
+++ b/7-浮动/4-使用float进行布局.html
@@ -3,8 +3,149 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        /*全局清空内外边距*/
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        /*  定义左浮动标准class  */
+        .leftfix {
+            float: left;
+        }
+
+        /*  定义右浮动标准class  */
+        .rightfix {
+            float: right;
+        }
+
+        /*  定义清除浮动标准class  */
+        .clearfix::after {
+            content: '';
+            display: block;
+            clear: both;
+        }
+
+        .container {
+            width: 960px;
+            /*height: 50px;*/
+            /*background-color: gray;*/
+            /*上下0  左右auto，就是水平居中*/
+            margin: 0 auto;
+            /*子元素可以继承*/
+            text-align: center;
+        }
+
+        .logo, .banner1, .banner2 {
+            background-color: gray;
+            height: 80px;
+            /*margin-right: 10px;*/
+            line-height: 80px;
+        }
+        .logo {
+            width:200px;
+        }
+        .banner1 {
+            width: 540px;
+            /*上下0 ，左右10px*/
+            margin: 0 10px;
+        }
+        .banner2 {
+            width: 200px;
+        }
+        .menu {
+            background-color: gray;
+            margin-top: 10px;
+        }
+
+        .top,.bottom {
+            margin-top: 10px;
+        }
+
+
+        .item1, .item2 {
+            /*width: 370px; 要去掉border的1px*/
+            width: 368px;
+            border: 1px solid black;
+            /*height: 200px;*/
+            height: 198px;
+            margin-right: 10px;
+            line-height: 198px;
+        }
+
+        .item3, .item4, .item5, .item6 {
+            width: 178px;
+            height: 198px;
+            border: 1px solid black;
+            margin-right : 10px;
+            line-height: 198px;
+        }
+
+        .item7, .item8, .item9 {
+            width: 198px;
+            height: 128px;
+            border: 1px solid black;
+            margin-top: 10px;
+            line-height: 128px;
+        }
+
+        .footer {
+            border: 1px solid black;
+            background-color: gray;
+            width: 960px;
+            height: 60px;
+            margin-top: 10px;
+            line-height: 60px;
+        }
+    </style>
 </head>
 <body>
+<div class="container ">
+    <div class="page-header clearfix">
+        <div class="logo leftfix">logo</div>
+        <div class="banner1 leftfix">banner1</div>
+        <div class="banner2 leftfix">banner2</div>
+    </div>
+    <div class="menu">
+        菜单
+    </div>
+    <div class="content clearfix">
+        <div class="left leftfix">
+            <div class="top clearfix">
+                <div class="item1 leftfix">
+                    栏目1
+                </div>
+                <div class="item2 leftfix">
+                    栏目2
+                </div>
+            </div>
+            <div class="bottom clearfix">
+                <div class="item3 leftfix">
+                    栏目3
+                </div>
+                <div class="item4 leftfix">
+                    栏目4
+                </div>
+                <div class="item5 leftfix">
+                    栏目5
+                </div>
+                <div class="item6 leftfix">
+                    栏目6
+                </div>
+            </div>
+        </div>
 
+        <div class="right leftfix">
+            <div class="item7">栏目7</div>
+            <div class="item8">栏目8</div>
+            <div class="item9">栏目9</div>
+        </div>
+    </div>
+
+    <div class="footer leftfix">
+        底部
+    </div>
+</div>
 </body>
 </html>
