定位的应用。

--- a/8-定位/5-定位的特殊应用3.html
+++ b/8-定位/5-定位的特殊应用3.html
@@ -11,8 +11,9 @@
             position: relative;
         }
 
-        /*  特殊应用3：水平垂直居中于父元素，不推荐用margin配合，太麻烦  */
+        /*  特殊应用3：水平垂直居中于父元素，不推荐用margin配合，太麻烦，并且必须设置宽和高  */
         .inner {
+            /*必须设置宽和高*/
             width: 400px;
             height: 100px;
             background-color: orange;
