css3 flex 侧轴多行对齐 水平垂直居中

--- a/11-伸缩盒模型/侧轴对齐-单行.html
+++ b/11-伸缩盒模型/侧轴对齐-单行.html
@@ -15,6 +15,8 @@
             display: flex;
             flex-wrap: wrap;
 
+            /*侧轴对齐：默认，效果就是顶部对齐*/
+            align-items: normal;
             /*侧轴对齐：起点对齐*/
             align-items: flex-start;
             /*侧轴对齐：终点对齐*/
